# lakeflow-pipeline-ingestion-framework-dabs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  databricks.example.yml  pipeline_config.example.yaml  pyproject.toml
.github/workflows/: release.yml
dlt_ingestion_framework/: cli.py
dlt_ingestion_framework/templates/: dlt_pipeline.sql.j2  pipeline.yml.j2
lakeflow_ingestion_framework/: cli.py
lakeflow_ingestion_framework/templates/: expectations_report.sql.j2  job.yml.j2  lakeflow_pipeline.sql.j2  pipeline.yml.j2  tagging_script.sql.j2
memory/: MEMORY.md  reference_example_repo.md
tests/: test_templates.py
