[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakeflow-pipeline-ingestion-framework"
version = "1.0.0"
description = "YAML-driven Lakeflow Declarative Pipelines ingestion framework for Databricks Asset Bundles"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
lakeflow-generate = "lakeflow_ingestion_framework.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lakeflow_ingestion_framework*"]

[tool.setuptools.package-data]
lakeflow_ingestion_framework = ["templates/*"]
